# Homework_Module_14_PythonWEB

./: LICENSE  README.md
hw_14/: Umova.txt  alembic.ini  main.py  pyproject.toml  test.db
hw_14/docs/: conf.py  index.rst
hw_14/docs/_build/doctrees/: environment.pickle  index.doctree
hw_14/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hw_14/docs/_build/html/_sources/: index.rst.txt
hw_14/migrations/: env.py
hw_14/migrations/versions/: e2db09bf71ea_init.py
hw_14/postgres-data/: postmaster.pid
hw_14/postgres-data/base/16384/: 1247  1249  1259  16388  16391  16393  16394  16400  16402  16404  16405  16406  16411  16412  16419  16420  16421  16422  16423  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  (+8 more)
hw_14/postgres-data/base/5/: pg_internal.init
hw_14/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
hw_14/postgres-data/pg_stat/: pgstat.stat
hw_14/src/conf/: config.py  messages.py
hw_14/src/database/: db.py  models.py
hw_14/src/repository/: contacts.py  users.py
hw_14/src/routes/: auth.py  contacts.py  users.py
hw_14/src/schemas/: contact.py  user.py
hw_14/src/services/: auth.py  email.py
hw_14/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
